# bib

./: CMakeLists.txt  README.md  bib.bat  compile.bat  start.bat  start.sh
src/bib/: dispatcher.cpp  main.cpp  parser.cpp
src/bib/include/: arguments.hpp  command.hpp  dispatcher.hpp  parser.hpp
src/bib_core/: author_dao.cpp  bib.cpp  book_dao.cpp  database.cpp
src/bib_core/include/: bib.hpp
src/bib_core/include/bib/: database.hpp
src/bib_core/include/bib/dao/: author.hpp  book.hpp
src/bib_core/include/bib/dto/: author.hpp  authors_of_books.hpp  book.hpp
src/bib_core/include/bib/utils/: checker.hpp
src/tests/: main.cpp  test_author_dao.cpp  test_book_dao.cpp
tools/batches/: build_docker_image.bat  check_docker.bat  clean.bat  compile.bat  destroy_docker_image.bat  gen_cmake.bat  init_variables.bat  kill.bat  make_package.bat  run.bat  start_container.bat  start_gdbserver.bat  stop_container.bat  test.bat
tools/docker/: compose.yml
tools/docker/bib-dev/: Dockerfile
tools/shells/: build_docker_image.sh  check_docker.sh  init_variables.sh  kill.sh
